fix(penelope): define `all` optional-dependencies for CI full test
The CI workflow uses `uv sync --extra all` but `langchain` and
`langgraph` were defined as dependency-groups instead of
optional-dependencies, causing the extra to be unresolved.

--- a/penelope/pyproject.toml
+++ b/penelope/pyproject.toml
@@ -47,6 +47,24 @@ Repository = "https://github.com/rhesis-ai/rhesis"
 Documentation = "https://docs.rhesis.ai"
 "Bug Tracker" = "https://github.com/rhesis-ai/rhesis/issues"
 
+[project.optional-dependencies]
+langchain = [
+    "langchain>=1.0.0",
+    "langchain-core>=1.2.11",
+    "langchain-google-genai>=2.0.0",
+]
+langgraph = [
+    "langgraph>=0.2.0",
+    "langchain-core>=1.2.11",
+    "langchain-google-genai>=2.0.0",
+]
+all = [
+    "langchain>=1.0.0",
+    "langchain-core>=1.2.11",
+    "langchain-google-genai>=2.0.0",
+    "langgraph>=0.2.0",
+]
+
 [dependency-groups]
 dev = [
     "pre-commit>=4.3.0",
@@ -59,16 +77,6 @@ dev = [
     "types-requests>=2.32.0",
     "ruff>=0.11.6",
     "pyright>=1.1.406",
-]
-langchain = [
-    "langchain>=1.0.0",
-    "langchain-core>=1.2.11",
-    "langchain-google-genai>=2.0.0",
-]
-langgraph = [
-    "langgraph>=0.2.0",
-    "langchain-core>=1.2.11",
-    "langchain-google-genai>=2.0.0",
 ]
 
 [build-system]
